--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "openai-agents>=0.0.14",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
-    "psycopg2>=2.9.10",
+    "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
     "sqlmodel>=0.0.24",
